feat: add func of admin deleting company info

--- a/views/adminSearch.hbs
+++ b/views/adminSearch.hbs
@@ -56,7 +56,7 @@
                     {{!-- 設置data名稱，在資料傳遞時都會把名稱轉成全部小寫，所以設定名稱時，全部小寫就好 --}}
                     <button class=" btn btn-danger mx-2" style="font-size:medium; height:fit-content"
                         id="adminSearch-delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.adminSearch_no }}"
-                        data-name="{{ this.adminSearch_name }}" data-cpyno="{{this.CPY_NO}}" data-table="{{../tableFilter}}" data-cpyname="{{../companyFilter}}" data-category="adminSearch">
+                        data-name="{{ this.adminSearch_name }}" data-cpyno="{{this.CPY_NO}}" data-table="{{../tableFilter}}" data-cpyname="{{this.CPY_NAME}}" data-category="adminSearch">
                         刪除
                     </button>
                   </div>
