--- a/views/mail_newUser.hbs
+++ b/views/mail_newUser.hbs
@@ -1,6 +1,7 @@
 <body>
-  <h1>有新使用者加入</h1>
-  <p>新使用者名稱：{{cpy_name}}</p>
-  <p>新使用者帳號：{{email}}</p>
-  <p>請盡快前往<a href="http://192.168.11.80:3030/users/login">協助設定帳戶產業類別</a>，以便使用者使用!!</p>
+  <h1>新使用者加入</h1>
+  <p>公司代號：{{cpy_id}}</p>
+  <p>公司名稱：{{cpy_name}}</p>
+  <p>帳號：{{email}}</p>
+  <p>點擊<a href="http://192.168.11.80:3030/users/login">連結</a>並登入進行查看!!</p>
 </body>
