--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,6 +22,7 @@
     <div class="row col-6 d-flex mx-auto justify-content-center">
       <div class="col-10 d-flex align-items-center justify-content-center">
         <label class="m-5 label-title">公司職缺類別:</label>
+        {{#if notTrained}}<div>未訓練：{{notTrained}}</div>{{/if}}{{#if notRead}}<div>今日新增：{{notRead}}</div>{{/if}}
         <a href="/adminPositionInfo" class="btn btn-success active col-3" role="button">設定</a>
       </div>
     </div>
