--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,11 +6,11 @@
       <form action="/users/login" method="post">
         <div class="form-group">
           <label for="email">帳號</label>
-          <input type="email" id="email" name="email" class="form-control" placeholder="請輸入E-mail">
+          <input type="email" id="email" name="email" class="form-control" placeholder="請輸入E-mail" required>
         </div>
         <div class="form-group">
           <label for="password">密碼</label>
-          <input type="password" id="password" name="password" class="form-control" placeholder="請輸入密碼">
+          <input type="password" id="password" name="password" class="form-control" placeholder="請輸入密碼" required>
         </div>
         <button type="submit" class="btn btn-primary btn-block">Login</button>
         <p class="lead mt-4">
