--- a/views/adminPositionInfo.hbs
+++ b/views/adminPositionInfo.hbs
@@ -40,6 +40,13 @@
                     
                   </div>
                   <div class="d-flex justify-content-center item-buttons">
+                    {{#unless this.TRAINED}}
+                    <form action="/adminPositionInfo/trained/{{this.POSITION_ID}}?_method=PUT" method="POST">
+                      <button class="btn btn-warning mx-2" style="font-size:medium; height:fit-content">
+                        訓練完成
+                      </button>
+                    </form>
+                    {{/unless}}
                     <button class=" btn btn-danger mx-2" style="font-size:medium; height:fit-content"
                         id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.POSITION_ID }}"
                         data-name="{{ this.POSITION_NAME }}" data-category="adminPositionInfo">
@@ -55,7 +62,7 @@
       </ul>
     </div>
   </div>
-  <div class="col-10 my-5 d-flex">
+  <div class="col-10 my-5 d-flex justify-content-center">
     <div class="col-6">
       <div class="row justify-content-center">
         <a href="/adminPositionInfo/new" class="btn btn-outline-warning col-8" id="create-btn"
