--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,9 +13,44 @@
           <input type="password" id="password" name="password" class="form-control" placeholder="請輸入密碼" required>
         </div>
         <button type="submit" class="btn btn-primary btn-block">Login</button>
-        <p class="lead mt-4">
-        還沒有帳號?<a href="/users/register" style="color: blue;">註冊</a>
-      </p>
+      
+        <button type="button" class="btn btn-info btn-block" data-toggle="modal" data-target="#resetModal">
+          忘記密碼
+          </button>
+          <p class="lead mt-4">
+          還沒有帳號?<a href="/users/register" style="color: blue;">註冊</a>
+        </p>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="resetModal" tabindex="-1" role="dialog" aria-labelledby="resetModal" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">忘記密碼</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form action="/users/sendResetMail" method="GET">
+        <div class="modal-body">
+          {{> message}}
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text">信箱:</span>
+            </div>
+            <input type="email" class="form-control" name="resetEmail" placeholder="請出入申請帳號時所填入的E-mail..." aria-label="resetEmail"
+              aria-describedby="resetEmail" required>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+          <button type="submit" class="btn btn-primary">送出</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
