--- a/views/register.hbs
+++ b/views/register.hbs
@@ -45,13 +45,13 @@
         {{/if}}
 
         <div class="form-group">
-          <label for="password">Password</label>
+          <label for="password">密碼</label>
           <input type="password" id="password" name="password" class="form-control" placeholder="請輸入密碼"
             value="{{ password }}" required>
         </div>
 
         <div class="form-group">
-          <label for="confirmPassword">Confirm Password</label>
+          <label for="confirmPassword">確認密碼</label>
           <input type="password" id="confirmPassword" name="confirmPassword" class="form-control"
             placeholder="請再次輸入密碼" value="{{ confirmPassword }}" required>
         </div>
