feat:add comment

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,4 @@
-<div class="row mt-5">
+<div class="row mt-4">
   <div class="col-md-6 m-auto">
     <div class="card card-body">
       <h1 class="text-center mt-3">Login</h1>
@@ -42,7 +42,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text">信箱:</span>
             </div>
-            <input type="email" class="form-control" name="resetEmail" placeholder="請出入申請帳號時所填入的E-mail..." aria-label="resetEmail"
+            <input type="email" class="form-control" name="resetEmail" placeholder="請輸入申請帳號時所填入的E-mail..." aria-label="resetEmail"
               aria-describedby="resetEmail" required>
           </div>
         </div>
