feat: add new_adminIndustryInfo.hbs & debug adminIndustryInfo.hbs

--- a/views/adminIndustryInfo.hbs
+++ b/views/adminIndustryInfo.hbs
@@ -2,7 +2,7 @@
   <h1 class="m-5">公司產業類別</h1>
   <div class="row">
     <div class="industry-filter-wrapper">
-      <form action="/adminSubsidyInfo">
+      <form action="/adminIndustryInfo">
         <label for="search">搜尋產業類別：</label>
         <input type="text" name="search" id="search" onchange="submit()" value="{{search}}" placeholder="請輸入關鍵字...">
       </form> 
