--- a/views/edit_adminCompany.hbs
+++ b/views/edit_adminCompany.hbs
@@ -35,6 +35,15 @@
           </div>
 
           <div class="form-group">
+            <label for="ishr">客服使用者</label>
+            <select name="ishr" id="ishr" class="form-control" required>
+              <option value="" selected hidden>請選擇</option>
+              <option value="1" {{#is adminCompanyInfo.ISHR '1'}} selected {{/is}}>是</option>
+              <option value="0" {{#is adminCompanyInfo.ISHR '0'}} selected {{/is}}>否</option>
+            </select>
+          </div>
+
+          <div class="form-group">
             <label for="isadmin">權限</label>
             <select name="isadmin" id="isadmin" class="form-control" required>
               <option value="" selected hidden>請選擇</option>
