--- a/views/index.hbs
+++ b/views/index.hbs
@@ -60,6 +60,28 @@
 
   </div>
 </div>
+{{else if isHr}}
+  <div class="row">
+  <div class="col-10 mx-auto mt-3">
+  {{> message}}
+  </div>
+  <div class="col-12 mx-auto home">
+    <div class="row col-6 d-flex mx-auto justify-content-center">
+      <div class="col-12 d-flex align-items-center justify-content-center">
+        <label class="m-5 label-title">功能分類:</label>
+        <a href="/bf_cs_function" class="btn btn-success active col-3" role="button">設定</a>
+      </div>
+    </div> 
+
+    <div class="row col-6 d-flex mx-auto justify-content-center">
+      <div class="col-12 d-flex align-items-center justify-content-center">
+        <label class="m-5 label-title">問答分類:</label>
+        <a href="/bf_cs_question" class="btn btn-success active col-3" role="button">設定</a>
+      </div>
+    </div> 
+
+  </div>
+</div>
 {{else}}
 <div class="row">
   <div class="col-6 mx-auto mt-3">
