feat: add bf_cs function page cs_function.hbs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -69,14 +69,14 @@
     <div class="row col-6 d-flex mx-auto justify-content-center">
       <div class="col-12 d-flex align-items-center justify-content-center">
         <label class="m-5 label-title">功能分類:</label>
-        <a href="/bf_cs_function" class="btn btn-success active col-3" role="button">設定</a>
+        <a href="/bf_cs/function" class="btn btn-success active col-3" role="button">設定</a>
       </div>
     </div> 
 
     <div class="row col-6 d-flex mx-auto justify-content-center">
       <div class="col-12 d-flex align-items-center justify-content-center">
         <label class="m-5 label-title">問答分類:</label>
-        <a href="/bf_cs_question" class="btn btn-success active col-3" role="button">設定</a>
+        <a href="/bf_cs/question" class="btn btn-success active col-3" role="button">設定</a>
       </div>
     </div> 
 
