--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -95,6 +95,7 @@
   <script src="/javascript/front-script.js"></script>
   <script src="/javascript/search.js"></script>
   <script src="/javascript/adminSearch-new.js"></script>
+  <script src="/javascript/bf_cs_question.js"></script>
   <!-- Core theme JS-->
   {{!-- <script src="js/scripts.js"></script> --}}
 </body>
