feat: add edit func of question for users of botfornt hr

--- a/views/edit_cs_question.hbs
+++ b/views/edit_cs_question.hbs
@@ -11,7 +11,7 @@
               <span class="input-group-text new-title">問題描述</span>
             </div>
             <textarea type="text" class="form-control new-des" name="description" placeholder="請輸入問題描述..." aria-label="inputDes"
-              aria-describedby="des" rows="2" required>{{ questionInfo.DESCRIPTION }}</textarea>
+              aria-describedby="des" rows="2" disabled required>{{ questionInfo.DESCRIPTION }}</textarea>
           </div>
 
           <div class="input-group mb-3">
