--- a/views/cs_function.hbs
+++ b/views/cs_function.hbs
@@ -59,13 +59,13 @@
     </div>
   </div>
 
- <div class="col-10 my-5 d-flex justify-content-center">
-    {{!-- <div class="col-6">
+  <div class="col-10 my-5 d-flex justify-content-center">
+    <div class="col-6">
       <div class="row justify-content-center">
         <a href="/bf_cs/function/new" class="btn btn-outline-warning col-8" id="create-btn"
           style="font-size: 1.5rem;">新增功能</a>
       </div>
-    </div> --}}
+    </div>
     <div class="col-6">
       <div class="row justify-content-center">
         <a href="/" class="btn btn-outline-dark col-8" id="create-btn"
