--- a/views/cs_question.hbs
+++ b/views/cs_question.hbs
@@ -87,7 +87,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalScrollableTitle">刪除職缺</h5>
+        <h5 class="modal-title" id="exampleModalScrollableTitle">刪除資訊</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
