feat: add creating new question page new_cs_question.hbs

--- a/views/cs_question.hbs
+++ b/views/cs_question.hbs
@@ -66,12 +66,12 @@
   </div>
 
  <div class="col-10 my-5 d-flex justify-content-center">
-    {{!-- <div class="col-6">
+    <div class="col-6">
       <div class="row justify-content-center">
-        <a href="/bf_cs/function/new" class="btn btn-outline-warning col-8" id="create-btn"
+        <a href="/bf_cs/question/new" class="btn btn-outline-warning col-8" id="create-btn"
           style="font-size: 1.5rem;">新增功能</a>
       </div>
-    </div> --}}
+    </div>
     <div class="col-6">
       <div class="row justify-content-center">
         <a href="/" class="btn btn-outline-dark col-8" id="create-btn"
