fix: 更改form action位置

--- a/views/new_cs_question.hbs
+++ b/views/new_cs_question.hbs
@@ -2,7 +2,7 @@
   <div class="col-8 m-auto">
     <div class="card card-body">
       <h1 class="text-center mt-3">新增問答</h1>
-      <form action="/bf_cs/function/new" method="POST">
+      <form action="/bf_cs/question/new" method="POST">
         <div class="cs-search-wrapper">
           <div class="modal-body">
             {{> message}}
