--- a/views/cs_function.hbs
+++ b/views/cs_function.hbs
@@ -87,7 +87,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>刪除<strong id="delete-position">{{ this.POSITION_NAME }}</strong>將會把相關的問答資料一併刪除!</p>
+        <p>刪除<strong id="delete-position">{{ this.POSITION_NAME }}</strong>功能將會把相關的問答資料一併刪除!</p>
         <p>確定要刪除<strong id="delete-position">{{ this.POSITION_NAME }}</strong>?</p> 
       </div>
       <div class="modal-footer">
