--- a/views/cs_question.hbs
+++ b/views/cs_question.hbs
@@ -51,8 +51,8 @@
                         編輯
                     </a>
                     <button class=" btn btn-danger mx-2" style="font-size:medium; height:fit-content"
-                        id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.QUESTION_ID }}"
-                        data-name="{{ this.DESCRIPTION }}" data-category="bf_cs">
+                        id="delete-question-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.QUESTION_ID }}"
+                        data-name="{{ this.DESCRIPTION }}" data-functionid="{{this.FUNCTION_ID}}" data-categoryid="{{../categorySelect}}" data-category="bf_cs/question">
                         刪除
                     </button>
                   </div>
