feat: change add btn text

--- a/views/cs_question.hbs
+++ b/views/cs_question.hbs
@@ -69,7 +69,7 @@
     <div class="col-6">
       <div class="row justify-content-center">
         <a href="/bf_cs/question/new" class="btn btn-outline-warning col-8" id="create-btn"
-          style="font-size: 1.5rem;">新增功能</a>
+          style="font-size: 1.5rem;">新增問答</a>
       </div>
     </div>
     <div class="col-6">
