feat: add new mail template for add new Q_A information

--- a/views/mail_newUser.hbs
+++ b/views/mail_newUser.hbs
@@ -3,5 +3,5 @@
   <p>公司代號：{{cpy_id}}</p>
   <p>公司名稱：{{cpy_name}}</p>
   <p>帳號：{{email}}</p>
-  <p>點擊<a href="http://192.168.11.80:3030/users/login">連結</a>並登入進行查看!!</p>
+  <p>點擊<a href="http://localhost:3030/users/login">連結</a>並登入進行查看!!</p>
 </body>
