--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,71 +1,112 @@
 {{#if isAdmin}}
-<div class="row">
+  {{#is whichRole 'hire'}}
+  <div class="row">
+    <div class="col-10 mx-auto mt-3">
+    {{> message}}
+    </div>
+    <div class="col-10 mx-auto mt-3">
+      <form action="/roleFilter?_method=PUT" method="POST">
+        <select name="roleFilter" id="roleFilter" onchange="submit()">
+          <option value="hire" {{#is whichRole 'hire'}} selected {{/is}}>徵厲Hire</option>
+          <option value="hr" {{#is whichRole 'hr'}} selected {{/is}}>棉花糖客服</option>
+        </select>
+      </form>
+    </div>
+    <a href="/train" class="btn btn-dark active mx-3" role="button">Train</a>
+    <div class="col-12 mx-auto home">
+      <div class="row col-6 d-flex mx-auto justify-content-center">
+        {{!-- <button class=" btn btn-dark mx-2" style="font-size:medium; height:fit-content"
+          id="train-btn" data-toggle="modal" data-target="#trainModal">
+          訓練
+        </button> --}}
+        <div class="col-12 d-flex align-items-center justify-content-center">
+          <label class="m-5 label-title">公司帳號資料:</label>
+          <a href="/adminCompany" class="btn btn-success active col-3" role="button">設定</a>
+        </div>
+      </div> 
+
+      <div class="row col-6 d-flex mx-auto justify-content-center">
+        <div class="col-12 d-flex align-items-center justify-content-center">
+          <label class="m-5 label-title">公司資訊類別:</label>
+          <a href="/adminCompanyInfo" class="btn btn-success active col-3" role="button">設定</a>
+        </div>
+      </div> 
+
+      <div class="row col-6 d-flex mx-auto justify-content-center">
+        <div class="col-12 d-flex align-items-center justify-content-center" id="position-block">
+          <label class="m-5 label-title">公司職缺類別:</label>
+          <div class="position-detail-block">
+            {{#if notRead}}<div><a href="/adminPositionInfo/notRead" class="not-read-block">今日新增：{{notRead}}</a></div>{{/if}}
+            {{#if notTrained}}<div><a href="/adminPositionInfo/notTrained" class="not-trained-block">未訓練：{{notTrained}}</a></div>{{/if}}
+          </div>
+          <a href="/adminPositionInfo" class="btn btn-success active col-3" role="button">設定</a>
+        </div>
+      </div>
+
+      <div class="row col-6 d-flex mx-auto justify-content-center">
+        <div class="col-12 d-flex align-items-center justify-content-center">
+          <label class="m-5 label-title">公司產業類別:</label>
+          <a href="/adminIndustryInfo" class="btn btn-success active col-3" role="button">設定</a>
+        </div>
+      </div> 
+
+      <div class="row col-6 d-flex mx-auto justify-content-center">
+        <div class="col-12 d-flex align-items-center justify-content-center">
+          <label class="m-5 label-title">公司假別類別:</label>
+          <a href="/adminLeaveInfo" class="btn btn-success active col-3" role="button">設定</a>
+        </div>
+      </div>
+
+      <div class="row col-6 d-flex mx-auto justify-content-center">
+        <div class="col-12 d-flex align-items-center justify-content-center">
+          <label class="m-5 label-title">公司補助類別:</label>
+          <a href="/adminSubsidyInfo" class="btn btn-success active col-3" role="button">設定</a>
+        </div>
+      </div>
+
+      <div class="row col-12 d-flex mx-auto justify-content-start">
+        <div class="col-6 d-flex align-items-center justify-content-center">
+          <label class="m-5 label-title">公司回覆查詢:</label>
+          <a href="/adminSearch" class="btn btn-success active col-3" role="button">設定</a>
+        </div>
+      </div> 
+
+    </div>
+  </div>
+  {{/is}}
+  {{#is whichRole 'hr'}}
+  <div class="row">
   <div class="col-10 mx-auto mt-3">
   {{> message}}
   </div>
+  <div class="col-10 mx-auto mt-3">
+    <form action="/roleFilter?_method=PUT" method="POST">
+      <select name="roleFilter" id="roleFilter" onchange="submit()">
+        <option value="hire" {{#is whichRole 'hire'}} selected {{/is}}>徵厲Hire</option>
+        <option value="hr" {{#is whichRole 'hr'}} selected {{/is}}>棉花糖客服</option>
+      </select>
+    </form>
+  </div>
   <div class="col-12 mx-auto home">
     <div class="row col-6 d-flex mx-auto justify-content-center">
-      <a href="/train" class="btn btn-dark active mx-3" role="button">Train</a>
-      {{!-- <button class=" btn btn-dark mx-2" style="font-size:medium; height:fit-content"
-        id="train-btn" data-toggle="modal" data-target="#trainModal">
-        訓練
-      </button> --}}
       <div class="col-12 d-flex align-items-center justify-content-center">
-        <label class="m-5 label-title">公司帳號資料:</label>
-        <a href="/adminCompany" class="btn btn-success active col-3" role="button">設定</a>
+        <label class="m-5 label-title">功能分類:</label>
+        <a href="/bf_cs/function" class="btn btn-success active col-3" role="button">設定</a>
       </div>
     </div> 
 
     <div class="row col-6 d-flex mx-auto justify-content-center">
       <div class="col-12 d-flex align-items-center justify-content-center">
-        <label class="m-5 label-title">公司資訊類別:</label>
-        <a href="/adminCompanyInfo" class="btn btn-success active col-3" role="button">設定</a>
-      </div>
-    </div> 
-
-    <div class="row col-6 d-flex mx-auto justify-content-center">
-      <div class="col-12 d-flex align-items-center justify-content-center" id="position-block">
-        <label class="m-5 label-title">公司職缺類別:</label>
-        <div class="position-detail-block">
-          {{#if notRead}}<div><a href="/adminPositionInfo/notRead" class="not-read-block">今日新增：{{notRead}}</a></div>{{/if}}
-          {{#if notTrained}}<div><a href="/adminPositionInfo/notTrained" class="not-trained-block">未訓練：{{notTrained}}</a></div>{{/if}}
-        </div>
-        <a href="/adminPositionInfo" class="btn btn-success active col-3" role="button">設定</a>
-      </div>
-    </div>
-
-    <div class="row col-6 d-flex mx-auto justify-content-center">
-      <div class="col-12 d-flex align-items-center justify-content-center">
-        <label class="m-5 label-title">公司產業類別:</label>
-        <a href="/adminIndustryInfo" class="btn btn-success active col-3" role="button">設定</a>
-      </div>
-    </div> 
-
-    <div class="row col-6 d-flex mx-auto justify-content-center">
-      <div class="col-12 d-flex align-items-center justify-content-center">
-        <label class="m-5 label-title">公司假別類別:</label>
-        <a href="/adminLeaveInfo" class="btn btn-success active col-3" role="button">設定</a>
-      </div>
-    </div>
-
-    <div class="row col-6 d-flex mx-auto justify-content-center">
-      <div class="col-12 d-flex align-items-center justify-content-center">
-        <label class="m-5 label-title">公司補助類別:</label>
-        <a href="/adminSubsidyInfo" class="btn btn-success active col-3" role="button">設定</a>
-      </div>
-    </div>
-
-    <div class="row col-12 d-flex mx-auto justify-content-start">
-      <div class="col-6 d-flex align-items-center justify-content-center">
-        <label class="m-5 label-title">公司回覆查詢:</label>
-        <a href="/adminSearch" class="btn btn-success active col-3" role="button">設定</a>
+        <label class="m-5 label-title">問答分類:</label>
+        <a href="/bf_cs/question" class="btn btn-success active col-3" role="button">設定</a>
       </div>
     </div> 
 
   </div>
 </div>
+  {{/is}}
 {{else if isHr}}
-  <div class="row">
+<div class="row">
   <div class="col-10 mx-auto mt-3">
   {{> message}}
   </div>
