--- a/views/index.hbs
+++ b/views/index.hbs
@@ -91,6 +91,9 @@
     <div class="row col-6 d-flex mx-auto justify-content-center">
       <div class="col-12 d-flex align-items-center justify-content-center">
         <label class="m-5 label-title">功能分類:</label>
+        <div class="function-detail-block">
+            {{#if trainFunction}}<div><a href="/notTrainFunction" class="not-trained-block">功能未訓練：{{trainFunction}}</a></div>{{/if}}
+        </div>
         <a href="/bf_cs/function" class="btn btn-success active col-3" role="button">設定</a>
       </div>
     </div> 
@@ -98,6 +101,9 @@
     <div class="row col-6 d-flex mx-auto justify-content-center">
       <div class="col-12 d-flex align-items-center justify-content-center">
         <label class="m-5 label-title">問答分類:</label>
+        <div class="question-detail-block">
+            {{#if trainQuestion}}<div><a href="/notTrainQuestion" class="not-trained-block">問答未訓練：{{trainQuestion}}</a></div>{{/if}}
+        </div>
         <a href="/bf_cs/question" class="btn btn-success active col-3" role="button">設定</a>
       </div>
     </div> 
