feat: 修正admin hr顯示

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -90,9 +90,9 @@
   <div class="col-12 mx-auto home">
     <div class="row col-6 d-flex mx-auto justify-content-center">
       <div class="col-12 d-flex align-items-center justify-content-center">
-        <label class="m-5 label-title">功能分類:</label>
+        <label class="m-5 label-title">Admin - 功能分類:</label>
         <div class="function-detail-block">
-            {{#if trainFunction}}<div><a href="/notTrainFunction" class="not-trained-block">功能未訓練：{{trainFunction}}</a></div>{{/if}}
+            {{#if trainFunction}}<div><a href="/bf_cs/notTrainFunction" class="not-trained-block">功能未訓練：{{trainFunction}}</a></div>{{/if}}
         </div>
         <a href="/bf_cs/function" class="btn btn-success active col-3" role="button">設定</a>
       </div>
@@ -100,9 +100,9 @@
 
     <div class="row col-6 d-flex mx-auto justify-content-center">
       <div class="col-12 d-flex align-items-center justify-content-center">
-        <label class="m-5 label-title">問答分類:</label>
+        <label class="m-5 label-title">Admin - 問答分類:</label>
         <div class="question-detail-block">
-            {{#if trainQuestion}}<div><a href="/notTrainQuestion" class="not-trained-block">問答未訓練：{{trainQuestion}}</a></div>{{/if}}
+            {{#if trainQuestion}}<div><a href="/bf_cs/notTrainQuestion" class="not-trained-block">問答未訓練：{{trainQuestion}}</a></div>{{/if}}
         </div>
         <a href="/bf_cs/question" class="btn btn-success active col-3" role="button">設定</a>
       </div>
