--- a/views/cs_admin_question.hbs
+++ b/views/cs_admin_question.hbs
@@ -48,17 +48,25 @@
                   </div>
                   <div class="d-flex justify-content-center item-buttons">
                     {{#unless this.TRAINED}}
-                    <form action="/bf_cs/questionTrained/{{../categorySelect}}/{{this.FUNCTION_ID}}/{{this.QUESTION_ID}}?_method=PUT" method="POST">
-                      <button class="btn btn-warning mx-2" style="font-size:medium; height:fit-content">
+                    <form {{#if ../categorySelect}}action="/bf_cs/questionTrained/{{../categorySelect}}/{{this.FUNCTION_ID}}/{{this.QUESTION_ID}}?_method=PUT"
+                      {{else}}
+                      action="/bf_cs/questionTrained/{{this.FUNCTION_ID}}/{{this.QUESTION_ID}}?_method=PUT"
+                      {{/if}}
+                      method="POST">
+                      <button class="btn btn-warning mx-2" style="font-size:medium; height:fit-content" type="submit">
                         訓練完成
                       </button>
                     </form>
                     {{/unless}}
-                    <a href="/bf_cs/{{../categorySelect}}/{{../functionSelect}}/{{ this.QUESTION_ID}}/edit" class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
+                    <a {{#if ../categorySelect}}href="/bf_cs/{{../categorySelect}}/{{this.FUNCTION_ID}}/{{ this.QUESTION_ID}}/edit" 
+                    {{else}}
+                    href="/bf_cs/{{this.FUNCTION_ID}}/{{ this.QUESTION_ID}}/edit"
+                    {{/if}}
+                    class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
                         編輯
                     </a>
                     <button class=" btn btn-danger mx-2" style="font-size:medium; height:fit-content"
-                        id="delete-question-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.QUESTION_ID }}"
+                        id="delete-question-admin-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.QUESTION_ID }}"
                         data-name="{{ this.DESCRIPTION }}" data-functionid="{{this.FUNCTION_ID}}" data-categoryid="{{../categorySelect}}" data-category="bf_cs/question">
                         刪除
                     </button>
@@ -100,7 +108,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>確定要刪除<strong id="delete-position">{{ this.POSITION_NAME }}</strong>?</p> 
+        <p>確定要刪除<strong id="delete-question">{{ this.POSITION_NAME }}</strong>?</p> 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
