--- a/views/cs_function.hbs
+++ b/views/cs_function.hbs
@@ -87,8 +87,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>刪除<strong id="delete-position">{{ this.POSITION_NAME }}</strong>功能將會把相關的問答資料一併刪除!</p>
-        <p>確定要刪除<strong id="delete-position">{{ this.POSITION_NAME }}</strong>?</p> 
+        <p>刪除<strong id="delete-function">{{ this.POSITION_NAME }}</strong>功能將會把相關的問答資料一併刪除!</p>
+        <p>確定要刪除<strong id="delete-function">{{ this.POSITION_NAME }}</strong>?</p> 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
