--- a/views/index.hbs
+++ b/views/index.hbs
@@ -120,6 +120,9 @@
     <div class="row col-6 d-flex mx-auto justify-content-center">
       <div class="col-12 d-flex align-items-center justify-content-center">
         <label class="m-5 label-title">功能分類:</label>
+        <div class="function-detail-block">
+            {{#if trainFunction}}<div><a href="/bf_cs/TrainedFunction" class="trained-block">功能已完成訓練：{{trainFunction}}</a></div>{{/if}}
+        </div>
         <a href="/bf_cs/function" class="btn btn-success active col-3" role="button">設定</a>
       </div>
     </div> 
@@ -127,6 +130,9 @@
     <div class="row col-6 d-flex mx-auto justify-content-center">
       <div class="col-12 d-flex align-items-center justify-content-center">
         <label class="m-5 label-title">問答分類:</label>
+        <div class="question-detail-block">
+            {{#if trainQuestion}}<div><a href="/bf_cs/TrainedQuestion" class="trained-block">問答已完成訓練：{{trainQuestion}}</a></div>{{/if}}
+        </div>
         <a href="/bf_cs/question" class="btn btn-success active col-3" role="button">設定</a>
       </div>
     </div> 
