feat: 新增使用者首頁顯示已訓練完成提示style

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -276,7 +276,8 @@ color:#fff;
   position: relative;
 }
 
-.not-read-block{
+.not-read-block,
+.trained-block{
   font-weight: 400;
   color: #1b5cb6;
 }
