--- a/views/cs_function.hbs
+++ b/views/cs_function.hbs
@@ -33,7 +33,7 @@
                   <div class=" my-2 item-title">
                     <div class="d-flex">
                       <div class="label-title">功能名稱：</div>
-                      <div class="label-des">{{this.FUNCTION_NAME}}</div>
+                      <div class="label-des">{{this.FUNCTION_NAME}}{{#unless this.TRAINED}}(<strong style="color: #ff0000;">未訓練</strong>){{/unless}}</div>
                     </div>
                     <div class="d-flex">
                       <div class="label-title">功能英文名稱：</div>
