--- a/views/cs_question.hbs
+++ b/views/cs_question.hbs
@@ -47,7 +47,11 @@
                     <p class="des-text">{{ this.ANSWER }}</p>
                   </div>
                   <div class="d-flex justify-content-center item-buttons">
-                    <a href="/bf_cs/{{../categorySelect}}/{{../functionSelect}}/{{ this.QUESTION_ID}}/edit" class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
+                    <a {{#if ../categorySelect}}href="/bf_cs/{{../categorySelect}}/{{this.FUNCTION_ID}}/{{ this.QUESTION_ID}}/edit" 
+                    {{else}}
+                    href="/bf_cs/{{this.FUNCTION_ID}}/{{ this.QUESTION_ID}}/edit"
+                    {{/if}}
+                    class="btn btn-primary mx-2" style="font-size: 1rem; height:fit-content;">
                         編輯
                     </a>
                     <button class=" btn btn-danger mx-2" style="font-size:medium; height:fit-content"
