feat: 修改使用者問答資訊頁面 送出編輯功能路徑及返回路徑

--- a/views/edit_cs_question.hbs
+++ b/views/edit_cs_question.hbs
@@ -28,9 +28,15 @@
 
         </div>
         <div class="modal-footer">
-          <a {{#if category_id}}href="/bf_cs/question/filter?categorySelect={{category_id}}&functionSelect={{function_id}}&search=" 
+          <a 
+          {{#if isAdmin}}
+            {{#if category_id}}href="/bf_cs/question/filter?categorySelect={{category_id}}&functionSelect={{function_id}}&search=" 
+            {{else}}href="/bf_cs/notTrainQuestion"
+            {{/if}}
           {{else}}
-          href="/bf_cs/notTrainQuestion"
+            {{#if category_id}}href="/bf_cs/question/filter?categorySelect={{category_id}}&functionSelect={{function_id}}&search=" 
+            {{else}}href="/bf_cs/question"
+            {{/if}}
           {{/if}}
           class="btn btn-outline-info">取消</a>
           <button type="submit" class="btn btn-primary confirm-btn" id="confirm-create">儲存</button>
