--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -87,6 +87,7 @@
   <!-- 導入webchat最新版本 -->
   {{!-- <script src="https://storage.googleapis.com/mrbot-cdn/webchat-latest.js"></script> --}}
   <!-- Bootstrap core JS-->
+  <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -96,6 +97,7 @@
   <script src="/javascript/search.js"></script>
   <script src="/javascript/adminSearch-new.js"></script>
   <script src="/javascript/bf_cs_question.js"></script>
+  {{!-- <script data-main="front-script" src="javascript/require.js"></script> --}}
   <!-- Core theme JS-->
   {{!-- <script src="js/scripts.js"></script> --}}
 </body>
